--- a/index.html
+++ b/index.html
@@ -1,159 +1,287 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <title>
-      Online CV : ANIL KUMAR MULA
-    </title>
-  </head>
-  <body>
-    <header>
-      <h1>MY ONLINE CV </h1>
-    </header>
-    <main>
-      <div class="wrap">
-        <div class="left-col">
-          <img src="images/photo.jpg" alt="my photo" class="profile-pic">
-          <h3>
-            ANIL KUMAR MULA
-          </h3>
-          <section>
-            <div class="section-heading">
-              CAREER OBJECTIVE
-              <p class="body-text">
-                To work in any environment to enhance my knowledge 
-                and skills for growth of the organization and
-                 myself.
-              </p>
+<html>
+  <title>ANIL KUMAR MULA Online Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
+  <style>
+    html,
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: 'Roboto', sans-serif;
+    }
+  </style>
+  <body class="w3-light-grey">
+    <!-- Page Container -->
+    <div class="w3-content w3-margin-top" style="max-width: 1400px">
+      <!-- The Grid -->
+      <div class="w3-row-padding">
+        <!-- Left Column -->
+        <div class="w3-third">
+          <div class="w3-white w3-text-grey w3-card-4">
+            <div class="w3-display-container w3-circle">
+              <img src="/photo.jpg" style="width: 100%" alt="Anil KUMAR" />
+              <div class="w3-display-bottomleft w3-container w3-text-black">
+                <h2 class="w3-text-grey">ANIL KUMAR MULA</h2>
+              </div>
             </div>
-          </section>
-          <section>
-            <div class="section-heading">
-              PERSONAL SKILLS
-            </div>  
-            <ul class="list-no-bullets">
-              <li>
-                Self motivated.
-              </li>
-              <li>
-                Hard working.
-              </li>
-              <li>
-                Ability to think positively 
-                and tendency to adjust myself to any environment.
-              </li>
-            </ul>
-            
-          </section>
-          <section>
-            <div class="section-heading">
-              CONTACT INFORNATION
-              <p class="body-text">
-                Mobile: 99999999
+            <div class="w3-container">
+              <p>
+                <i
+                  class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                >Full Stack Web Developer
               </p>
-              <p class="body-text">
-                Email: <a>anilreddymula@gmail.com</a>
+              <p>
+                <i
+                  class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                >Copenhagen, Danmark
               </p>
-              <p class="body-text">
-                Address: Brøndby XXXX   XXXX <br>
-                2605
+              <p>
+                <i
+                  class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                >anilreddymula@gmail.com
               </p>
+              <p>
+                <i
+                  class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"
+                ></i
+                >+45 71339479
+              </p>
+              <hr />
+
+              <p class="w3-large">
+                <b
+                  ><i
+                    class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"
+                  ></i
+                  >Skills</b
+                >
+              </p>
+              <p>Java Script</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  style="width: 90%"
+                >
+                  90%
+                </div>
+              </div>
+              <p>React</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  style="width: 80%"
+                >
+                  <div class="w3-center w3-text-white">80%</div>
+                </div>
+              </div>
+              <p>NodeJS</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  style="width: 80%"
+                >
+                  80%
+                </div>
+              </div>
+              <p>MySql</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  style="width: 80%"
+                >
+                  80%
+                </div>
+              </div>
+              <p>Bootstrap</p>
+              <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div
+                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  style="width: 80%"
+                >
+                  95%
+                </div>
+              </div>
+              <br />
+
+              <p class="w3-large w3-text-theme">
+                <b
+                  ><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i
+                  >Languages</b
+                >
+              </p>
+              <p>English</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div
+                  class="w3-round-xlarge w3-teal"
+                  style="height: 24px; width: 100%"
+                ></div>
+              </div>
+              <p>Danish</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div
+                  class="w3-round-xlarge w3-teal"
+                  style="height: 24px; width: 55%"
+                ></div>
+              </div>
+              <p>Telugu(Indian Regional Language)</p>
+              <div class="w3-light-grey w3-round-xlarge">
+                <div
+                  class="w3-round-xlarge w3-teal"
+                  style="height: 24px; width: 95%"
+                ></div>
+              </div>
+              <br />
             </div>
-            <a href="http://www.facebook.com"> 
-            <img src="images/facebook.jpg" alt="facebook-logo" class="logo-dimenssions">
-            </a> 
-            <a href="http://www.twitter.com"> 
-            <img src="images/twitter.jpg" alt="twitter-logo" class="logo-dimenssions">
-            </a>
-            <a href="http://instagram.com">  
-            <img src="images/instagram.jpg" alt="instagram-logo" class="logo-dimenssions"> 
-            </a>
-          </section>
-        </div>
-        <div class="right-col">
-            <section>
-              <div class="section-heading">
-                WORK EXPERIENCE
-              </div>
-              <ul>
-                <li>
-                  Working as softare architect.             
-                </li>
-                <li>
-                  Worked as system developer.
-                </li>
-              </ul>
-            </section>
-            <section>
-              <div class="section-heading">
-                EDUCATION
-              </div>
-              <ul>
-                <li>
-                  Graduation
-                </li>
-                <li>
-                  Dansk Uddannelse
-                </li>
-              </ul>
-            </section>
-            <section>
-              <div class="section-heading">
-                TECHNICAL SKILLS
-              </div>
-              <ul>
-                <li>
-                  Know the basics of  C programming.
-                </li>
-                <li>
-                	Ability to write JAVA programs and read JAVA code.
-                </li>
-                <li>
-                  Learned HTML, CSS, and Java Script.
-                </li>
-                <li>
-                  Gained knowledge in core Python programming
-                </li>
-                <li>
-                  Capability to use MS EXCEL and analyze data in it
-                </li>
-                <li>
-                  Familiar with TeX , a document preparation system
-                </li>
-              </ul>
-            </section>
-            <section>
-              <div class="section-heading">
-                CERTIFICATIONS(online certifications from coursera.org)
-              </div>
-              <ul>
-                <li>
-                  Internet History, Technology, and Security from university of Michigan
-                </li>
-                <li>
-                  Programming for Everybody (Python) from university of Michigan
-                </li>
-                <li>
-                  An Introduction to Interactive Programming in Python from Rice University
-                </li>
-              </ul>
-            </section>
-            <section>
-              <div class="section-heading">
-                LANGUAGE SKILLS
-              </div>
-              <ul>
-                <li>
-                  Fluent in English
-                </li>
-                <li>
-                  Danish Basic.
-                </li>
-              </ul>
-            </section>
           </div>
+          <br />
+
+          <!-- End Left Column -->
         </div>
-    </main> 
+
+        <!-- Right Column -->
+        <div class="w3-twothird">
+          <div class="w3-container w3-card w3-teal w3-margin-bottom">
+            <h2 class="w3-text-white w3-padding-16">
+              <i
+                class="fa fa-user fa-fw w3-margin-right w3-xxlarge w3-text-white"
+              ></i
+              >ANIL KUMAR MULA
+            </h2>
+
+            <div class="w3-container w3-text-white">
+              <h5 class="w3-text-white">
+                <p>
+                  I am self motivated, hardworking, and ability to think
+                  positively and tendency to adjust myself to any environment.
+                </p>
+              </h5>
+
+              <hr />
+            </div>
+          </div>
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
+            <h2 class="w3-text-grey w3-padding-16">
+              <i
+                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+              ></i
+              >Work Experience
+            </h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Mini Project /www.hackyourfuture.dk</b>
+              </h5>
+              <a href="https://mealshare-anil.herokuapp.com/" target="_blank"
+                ><i class="w3-hover-opacity"
+                  >Click to open Meal Share Website</i
+                >
+              </a>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2020 -
+                <span class="w3-tag w3-teal w3-round">Current</span>
+              </h6>
+              <p>
+                The main aim of this application is to offer meals and reserve
+                meals. Two groups of people can use this website. The one who
+                shares their meal(vendor) and others who likes to join a
+                meal(customer). Vendor can plan for a meal and registers with
+                the site. Customer can reserve a meal.
+              </p>
+              <hr />
+            </div>
+          </div>
+
+          <div class="w3-container w3-card w3-white">
+            <h2 class="w3-text-grey w3-padding-16">
+              <i
+                class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+              ></i
+              >Education
+            </h2>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Web Development @www.hackyourfuture.dk </b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>March
+                2020-till date
+              </h6>
+              <p>
+                All the technologies(HTML/CSS, JavaScript, MySql, NodeJS,
+                ExpressJS, React, etc.) that you need for Full Stack
+                WebDevelopment
+              </p>
+              <hr />
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>School of Information Technology</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>2009 - 2011
+              </h6>
+              <p>Master of Technology(Software Engioneering)</p>
+              <hr />
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity">
+                <b>Jawaharlal Nehru Technological University</b>
+              </h5>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>2002 - 2006
+              </h6>
+              <p>Bachelor of Technology(Computer Science)</p>
+              <br />
+            </div>
+          </div>
+
+          <!-- End Right Column -->
+        </div>
+
+        <!-- End Grid -->
+      </div>
+
+      <!-- End Page Container -->
+    </div>
+
+    <footer class="w3-container w3-teal w3-center w3-margin-top">
+      <p>Find me on social media.</p>
+      <a href="https://www.facebook.com/anilreddy.mula" target="_blank"
+        ><i class="fa fa-facebook-official w3-hover-opacity"></i
+      ></a>
+      <a href="https://www.instagram.com/anil_mula/" target="_blank"
+        ><i class="fa fa-instagram w3-hover-opacity"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/anil-kumar-56729475/" target="_blank"
+        ><i class="fa fa-linkedin w3-hover-opacity"></i
+      ></a>
+      <a href="https://twitter.com/" target="_blank"
+        ><i class="fa fa-twitter w3-hover-opacity"></i
+      ></a>
+      <a href="https://github.com/AnilMula" target="_blank"
+        ><i class="fa fa-github w3-hover-opacity"></i
+      ></a>
+      <a
+        href="https://www.google.com/search?q=anil+kumar+mula&oq=&aqs=chrome.0.69i59l8.690007370j0j15&sourceid=chrome&ie=UTF-8"
+        ><i class="fa fa-google w3-hover-opacity"></i
+      ></a>
+      <p>@AnilKumarMula</p>
+    </footer>
   </body>
 </html>
