--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
         <div class="w3-third">
           <div class="w3-white w3-text-grey w3-card-4">
             <div class="w3-display-container w3-circle">
-              <img src="./photo.jpg" style="width: 100%" alt="Anil KUMAR" />
+              <img
+                src="./circlephoto.png"
+                style="width: 100%"
+                alt="Anil KUMAR"
+              />
               <div class="w3-display-bottomleft w3-container w3-text-black">
                 <h2 class="w3-text-grey">ANIL KUMAR MULA</h2>
               </div>
