--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <!-- Left Column -->
         <div class="w3-third">
           <div class="w3-white w3-text-grey w3-card-4">
-            <div class="w3-display-container w3-circle">
+            <div class="w3-display-container w3-circle w3-center">
               <img
                 src="./circlephoto.png"
-                style="width: 100%"
+                style="width: 50%"
                 alt="Anil KUMAR"
               />
-              <div class="w3-display-bottomleft w3-container w3-text-black">
-                <h2 class="w3-text-grey">ANIL KUMAR MULA</h2>
+              <div class="w3-display w3-container w3-text-black">
+                <h2 class="w3-text-teal">ANIL KUMAR MULA</h2>
               </div>
             </div>
             <div class="w3-container">
