--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                   class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"
                 ></i
                 >Copenhagen, Danmark
+                <p>
               </p>
-              <p>
                 <i
                   class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"
                 ></i
@@ -77,51 +77,22 @@
                   >Skills</b
                 >
               </p>
-              <p>Java Script</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
-                  style="width: 90%"
-                >
-                  90%
-                </div>
-              </div>
-              <p>React</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
-                  style="width: 80%"
-                >
-                  <div class="w3-center w3-text-white">80%</div>
-                </div>
-              </div>
-              <p>NodeJS</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
-                  style="width: 80%"
-                >
-                  80%
-                </div>
-              </div>
-              <p>MySql</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
-                  style="width: 80%"
-                >
-                  80%
-                </div>
-              </div>
-              <p>Bootstrap</p>
-              <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
-                  style="width: 80%"
-                >
-                  95%
-                </div>
-              </div>
+              <button class="w3-tag w3-teal w3-round w3-margin">
+                HTML/CSS
+              </button>
+              <button class="w3-tag w3-teal w3-round w3-margin">
+                JavaScript
+              </button>
+              <button class="w3-tag w3-teal w3-round w3-margin">MySQL</button>
+              <button class="w3-tag w3-teal w3-round w3-margin">NodeJs</button>
+
+              <button class="w3-tag w3-teal w3-round w3-margin">React</button>
+              <button class="w3-tag w3-teal w3-round w3-margin">
+                Knex
+              </button>
+              <button class="w3-tag w3-teal w3-round w3-margin">APIs</button>
+              <button class="w3-tag w3-teal w3-round w3-margin">Bootstrap</button>
+
               <br />
 
               <p class="w3-large w3-text-theme">
